--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "dev": "node app.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "ngrok": "^3.2.7"
   },
   "devDependencies": {}
 }
