--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "private": true,
   "license": "MIT",
   "scripts": {
-    "dev": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node src/index.ts"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   }
 }
