--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "nodemon"
   },
   "dependencies": {
     "express": "^4.17.1",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "nodemon": "^2.0.2",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   }
