--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "NODE_ENV=production node dist/index.js",
     "dev": "nodemon",
     "lint": "eslint src/index.ts",
     "lint:fix": "eslint --fix src/index.ts"
