--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "nodemon",
     "lint": "eslint src/index.ts",
-    "lint:fix": "eslint --fix src/index.ts"
+    "lint:fix": "eslint --fix src/index.ts",
+    "test": "jest"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
@@ -19,13 +20,16 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/jest": "^25.1.2",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "jest": "^25.1.0",
     "nodemon": "^2.0.2",
     "prettier": "^1.19.1",
+    "ts-jest": "^25.2.0",
     "ts-node": "^8.6.2",
     "typescript": "^3.7.5"
   }
