--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "tsc",
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "nodemon",
-    "lint": "eslint src/index.ts",
-    "lint:fix": "eslint --fix src/index.ts",
+    "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
+    "lint:fix": "eslint --ext .js,.ts --ignore-path .gitignore . --fix",
     "test": "jest"
   },
   "dependencies": {
