--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "jest --verbose"
   },
   "dependencies": {
+    "castv2-client": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-tts-api": "0.0.4",
