--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prettier": "^1.19.1",
     "ts-jest": "^25.2.0",
     "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.7.5"
   }
 }
