Google Home の IP アドレスを環境変数で指定するようにした

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-PORT=3000
-NGROK_TOKEN=PLEASE_SET_YOUR_NGROK_TOKEN
+# GOOGLE_HOME_IP_ADDRESS=PLEASE_SET_YOUR_GOOGLE_HOME_IP_ADDRESS
+# NGROK_TOKEN=PLEASE_SET_YOUR_NGROK_TOKEN
