--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.17.1",
     "google-tts-api": "0.0.4",
     "module-alias": "^2.2.2",
-    "ngrok": "^3.2.7"
+    "ngrok": "^3.2.7",
+    "proper-url-join": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
