AWS API Gateway を使って ngrok の URL を固定できるようにした

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@
 # in  India
 #
 # NGROK_REGION=jp
+
+USE_API_GATEWAY=0 # 0: false, 1: true
+API_GATEWAY_REGION=ap-northeast-1
+API_GATEWAY_REST_API_ID=xxxxxxxx
+API_GATEWAY_RESOURCE_ID=xxxxxxxx
+API_GATEWAY_HTTP_METHOD=POST
+# API_GATEWAY_PROFILE=xxxxxxxx # AWS CLI OPTION (OPTIONAL)
