--- a/.env.test
+++ b/.env.test
@@ -11,3 +11,10 @@ GOOGLE_HOME_IP_ADDRESS=192.168.3.1 # dummy
 # in  India
 #
 # NGROK_REGION=jp
+
+USE_API_GATEWAY=0 # 0: false, 1: true
+API_GATEWAY_REGION=ap-northeast-1
+API_GATEWAY_REST_API_ID=xxxxxxxx
+API_GATEWAY_RESOURCE_ID=xxxxxxxx
+API_GATEWAY_HTTP_METHOD=POST
+# API_GATEWAY_PROFILE=xxxxxxxx # AWS CLI OPTION (OPTIONAL)
