pm2 を ecosystem.config.js 経由で制御するようにした

--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "scripts": {
     "build": "rm -rf dist/ && tsc",
-    "start": "pm2 start dist/index.js --name google-home-notifier-api",
-    "reload": "pm2 reload google-home-notifier-api",
-    "restart": "pm2 restart google-home-notifier-api",
-    "stop": "pm2 stop google-home-notifier-api",
+    "start": "pm2 start ecosystem.config.js --env production",
+    "reload": "pm2 reload ecosystem.config.js --env production",
+    "restart": "pm2 restart ecosystem.config.js --env production",
+    "stop": "pm2 stop ecosystem.config.js",
     "dev": "nodemon",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
     "lint:fix": "eslint --ext .js,.ts --ignore-path .gitignore . --fix",
