--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "reload": "pm2 reload ecosystem.config.js --env production",
     "restart": "pm2 restart ecosystem.config.js --env production",
     "stop": "pm2 stop ecosystem.config.js",
+    "deploy": "pm2 deploy ecosystem.config.js production",
     "dev": "nodemon",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
     "lint:fix": "eslint --ext .js,.ts --ignore-path .gitignore . --fix",
