--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "google-tts-api": "0.0.4",
+    "mdns-js": "^1.0.3",
     "module-alias": "^2.2.2",
     "morgan": "^1.9.1",
     "ngrok": "^3.2.7",
