--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "build": "rm -rf dist/ && tsc",
     "start": "pm2 start ecosystem.config.js --env production",
-    "reload": "pm2 reload ecosystem.config.js --env production",
-    "restart": "pm2 restart ecosystem.config.js --env production",
+    "reload": "pm2 reload ecosystem.config.js --env production --update-env",
+    "restart": "pm2 restart ecosystem.config.js --env production --update-env",
     "stop": "pm2 stop ecosystem.config.js",
     "deploy": "pm2 deploy ecosystem.config.js production",
     "dev": "nodemon",
