--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.0",
     "castv2-client": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
