--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-nest-notifier-api",
+  "name": "google-nest-notifier",
   "version": "0.0.2",
   "description": "Web API for send notifications to Google Nest",
   "author": "INOUE Takuya <inouetakuya5@gmail.com>",
