--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "reload": "pm2 reload ecosystem.config.js --env production --update-env",
     "restart": "pm2 restart ecosystem.config.js --env production --update-env",
     "stop": "pm2 stop ecosystem.config.js",
+    "deploy:setup": "pm2 deploy ecosystem.config.js production setup",
     "deploy": "pm2 deploy ecosystem.config.js production",
     "dev": "nodemon",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
