--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "stop": "pm2 stop ecosystem.config.js",
     "deploy": "pm2 deploy ecosystem.config.js production",
     "deploy:setup": "pm2 deploy ecosystem.config.js production setup",
+    "deploy:only": "pm2 deploy ecosystem.config.js deploy-only",
     "deploy:logs": "pm2 deploy ecosystem.config.js production exec 'npx pm2 logs google-nest-notifier'",
     "dev": "nodemon",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
