--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
     "jest": "^26.6.3",
+    "lerna": "^4.0.0",
     "minimist": "^1.2.5",
     "node-mocks-http": "^1.8.1",
     "nodemon": "^2.0.2",
