--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "google-nest-notifier",
-  "version": "0.0.3",
-  "description": "Send notifications to Google Nest",
-  "keywords": [
-    "google home",
-    "google nest",
-    "notifications",
-    "notifier"
-  ],
+  "name": "google-nest-notifier-listener-example",
+  "version": "1.0.0",
+  "description": "Listener for google-nest-notifier",
   "author": "INOUE Takuya <inouetakuya5@gmail.com>",
   "homepage": "https://github.com/inouetakuya/google-nest-notifier#readme",
+  "private": true,
   "license": "MIT",
-  "main": "lib/google-nest-notifier.js",
+  "main": "lib/listener.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
