use yarn workspaces

--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "google-nest-notifier-listener-example",
+  "name": "listener",
   "version": "1.0.0",
   "description": "Listener for google-nest-notifier",
   "author": "INOUE Takuya <inouetakuya5@gmail.com>",
