--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.3",
   "description": "Workspaces for google-nest-notifier",
   "author": "INOUE Takuya <inouetakuya5@gmail.com>",
-  "private": true,
   "license": "MIT",
+  "private": true,
+  "workspaces": [
+    "packages/*",
+    "examples/*"
+  ],
   "scripts": {
     "build": "rm -rf dist/ && tsc",
     "start": "pm2 start ecosystem.config.js --env production",
