--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -9,5 +9,4 @@ jobs:
       - name: eslint
         uses: reviewdog/action-eslint@v1
         with:
-          reporter: github-pr-review # Change reporter.
-          eslint_flags: 'src/'
+          reporter: github-pr-review
