ci: fail_on_error: false # because level is warning

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -12,4 +12,4 @@ jobs:
           level: warning
           reporter: github-pr-review
           filter_mode: nofilter
-          fail_on_error: true
+          fail_on_error: false # because level is warning
