chore: "@typescript-eslint/no-var-requires": "off"

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,6 @@
   "parser": "@typescript-eslint/parser",
   "rules": {
     "@typescript-eslint/ban-ts-comment": "off",
-    "@typescript-eslint/no-var-requires": "error"
+    "@typescript-eslint/no-var-requires": "off"
   }
 }
