new file: packages/google-nest-notifier/src/lib/MulticastDnsData.ts

--- a/packages/google-nest-notifier/package.json
+++ b/packages/google-nest-notifier/package.json
@@ -33,6 +33,7 @@
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "dependencies": {
-    "google-tts-api": "^0.0.6"
+    "google-tts-api": "^0.0.6",
+    "mdns-js": "^1.0.3"
   }
 }
