--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dev": "nodemon",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
     "lint:fix": "eslint --ext .js,.ts --ignore-path .gitignore . --fix",
-    "test": "jest --verbose --runInBand --detectOpenHandles"
+    "test": "jest --verbose --runInBand --detectOpenHandles && yarn test:google-nest-notifiler",
+    "test:google-nest-notifiler": "yarn workspace google-nest-notifier test"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
