chore: yarn workspace google-nest-notifier add castv2-client

--- a/packages/google-nest-notifier/package.json
+++ b/packages/google-nest-notifier/package.json
@@ -33,6 +33,7 @@
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "dependencies": {
+    "castv2-client": "^1.2.0",
     "google-tts-api": "^0.0.6",
     "mdns-js": "^1.0.3"
   }
