--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "castv2-client": "^1.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "google-tts-api": "0.0.6",
+    "google-tts-api": "^0.0.6",
     "mdns-js": "^1.0.3",
     "module-alias": "^2.2.2",
     "morgan": "^1.9.1",
