--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -28,6 +28,11 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
+    "@hapi/boom": "^9.1.2",
+    "express": "^4.17.1",
     "google-nest-notifier": "./packages/google-nest-notifier"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.11"
   }
 }
