--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -25,14 +25,14 @@
     "url": "https://github.com/inouetakuya/google-nest-notifier/issues"
   },
   "scripts": {
-    "test": "echo \"Error: run tests from root\" && exit 1"
+    "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "dependencies": {
-    "@hapi/boom": "^9.1.2",
     "express": "^4.17.1",
     "google-nest-notifier": "./packages/google-nest-notifier"
   },
   "devDependencies": {
-    "@types/express": "^4.17.11"
+    "@types/express": "^4.17.11",
+    "node-mocks-http": "^1.10.1"
   }
 }
