--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -28,8 +28,7 @@
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "google-nest-notifier": "./packages/google-nest-notifier"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
