--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -25,14 +25,18 @@
     "url": "https://github.com/inouetakuya/google-nest-notifier/issues"
   },
   "scripts": {
+    "dev": "nodemon",
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.2",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "node-mocks-http": "^1.10.1"
+    "node-mocks-http": "^1.10.1",
+    "nodemon": "^2.0.7",
+    "ts-node": "^10.0.0"
   }
 }
