--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -37,6 +37,7 @@
     "@types/express": "^4.17.11",
     "node-mocks-http": "^1.10.1",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
     "ts-node": "^10.0.0"
   }
 }
