--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@types/express": "^4.17.2",
     "@types/jest": "^26.0.22",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
@@ -53,6 +54,7 @@
     "node-mocks-http": "^1.8.1",
     "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.5",
     "ts-node": "^8.6.2",
     "tsconfig-paths": "^3.9.0",
