--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -31,10 +31,12 @@
   "dependencies": {
     "@hapi/boom": "^9.1.2",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/morgan": "^1.9.2",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0"
   }
