--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Logs
-logs
+logs/*
 *.log
 npm-debug.log*
 yarn-debug.log*
@@ -102,3 +102,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+!.gitkeep
