chore: new file: examples/listener/src/lib/ngrokService.ts

--- a/examples/listener/.env.example
+++ b/examples/listener/.env.example
@@ -1,1 +1,15 @@
-# PORT=3000
+PORT=3000
+
+USE_NGROK=0 # 0: false, 1: true
+NGROK_TOKEN=PLEASE_SET_YOUR_NGROK_TOKEN
+
+# ref: https://ngrok.com/docs#config-options
+# us  United States (default)
+# eu  Europe
+# ap  Asia/Pacific
+# au  Australia
+# sa  South America
+# jp  Japan
+# in  India
+#
+NGROK_REGION=us
