--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -32,7 +32,8 @@
     "@hapi/boom": "^9.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ngrok": "^4.0.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
