--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -6,14 +6,10 @@
   "homepage": "https://github.com/inouetakuya/google-nest-notifier#readme",
   "private": true,
   "license": "MIT",
-  "main": "lib/listener.js",
+  "main": "src/index.ts",
   "directories": {
-    "lib": "lib",
     "test": "__tests__"
   },
-  "files": [
-    "lib"
-  ],
   "publishConfig": {
     "registry": "https://registry.yarnpkg.com"
   },
