--- a/examples/listener/.env.example
+++ b/examples/listener/.env.example
@@ -1,6 +1,8 @@
 PORT=3000
 
-USE_NGROK=0 # 0: false, 1: true
+# 0: false, 1: true
+USE_NGROK=0
+
 NGROK_TOKEN=PLEASE_SET_YOUR_NGROK_TOKEN
 
 # ref: https://ngrok.com/docs#config-options
@@ -11,5 +13,15 @@ NGROK_TOKEN=PLEASE_SET_YOUR_NGROK_TOKEN
 # sa  South America
 # jp  Japan
 # in  India
-#
 NGROK_REGION=us
+
+# 0: false, 1: true
+USE_API_GATEWAY=0
+
+API_GATEWAY_REGION=ap-northeast-1
+API_GATEWAY_REST_API_ID=xxxxxxxx
+API_GATEWAY_RESOURCE_ID=xxxxxxxx
+API_GATEWAY_HTTP_METHOD=POST
+
+# AWS CLI OPTION (OPTIONAL)
+# API_GATEWAY_PROFILE=xxxxxxxx
