--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -29,11 +29,13 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "ngrok": "^4.0.1"
+    "ngrok": "^4.0.1",
+    "proper-url-join": "^2.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
+    "@types/proper-url-join": "^2.1.0",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0"
   }
