--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -28,6 +28,7 @@
     "@hapi/boom": "^9.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "google-nest-notifier": "./packages/google-nest-notifier",
     "morgan": "^1.10.0",
     "ngrok": "^4.0.1",
     "proper-url-join": "^2.1.1"
