feat: listener で build を実行できるようにした

--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -21,6 +21,7 @@
     "url": "https://github.com/inouetakuya/google-nest-notifier/issues"
   },
   "scripts": {
+    "build": "rm -rf dist/ && tsc",
     "dev": "nodemon",
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
