--- a/packages/google-nest-notifier/tsconfig.json
+++ b/packages/google-nest-notifier/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "sourceMap": false,
+    "sourceMap": true,
     "declaration": true,
     "outDir": "./dist",
     "strict": true,
