--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -22,6 +22,7 @@
   },
   "scripts": {
     "build": "rm -rf dist/ && tsc",
+    "start": "node dist/index.js",
     "dev": "nodemon",
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
