--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,4 +35,5 @@ jobs:
 
       - run: yarn lint
       - run: yarn build
+      - run: yarn workspace listener add ./packages/google-nest-notifier
       - run: yarn test
