ci: run: yarn workspace google-nest-notifier build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,9 @@ jobs:
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
 
+      - run: yarn workspace google-nest-notifier install
+      - run: yarn workspace google-nest-notifier build
+
       - run: yarn install
 
       - save_cache:
