feat: start listener with pm2

--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "build": "rm -rf dist/ && tsc",
-    "start": "node dist/index.js",
+    "start": "pm2 start ecosystem.config.js --env production",
     "dev": "nodemon",
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
