--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -23,6 +23,9 @@
   "scripts": {
     "build": "rm -rf dist/ && tsc",
     "start": "pm2 start ecosystem.config.js --env production",
+    "reload": "pm2 reload ecosystem.config.js --env production --update-env",
+    "restart": "pm2 restart ecosystem.config.js --env production --update-env",
+    "stop": "pm2 stop ecosystem.config.js",
     "dev": "nodemon",
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
