--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -51,7 +51,9 @@
     "@types/express": "^4.17.11",
     "@types/morgan": "^1.9.2",
     "@types/proper-url-join": "^2.1.0",
+    "@types/supertest": "^2.0.11",
     "nodemon": "^2.0.7",
+    "supertest": "^6.1.3",
     "ts-node": "^10.0.0"
   }
 }
