--- a/package.json
+++ b/package.json
@@ -10,39 +10,14 @@
     "examples/*"
   ],
   "scripts": {
-    "build": "rm -rf dist/ && tsc",
-    "start": "pm2 start ecosystem.config.js --env production",
-    "reload": "pm2 reload ecosystem.config.js --env production --update-env",
-    "restart": "pm2 restart ecosystem.config.js --env production --update-env",
-    "stop": "pm2 stop ecosystem.config.js",
-    "deploy": "pm2 deploy ecosystem.config.js production",
-    "deploy:setup": "pm2 deploy ecosystem.config.js production setup",
-    "deploy:only": "pm2 deploy ecosystem.config.js deploy-only",
-    "deploy:logs": "pm2 deploy ecosystem.config.js production exec 'npx pm2 logs google-nest-notifier'",
-    "dev": "nodemon",
     "lint": "eslint --ext .js,.ts --ignore-path .gitignore .",
     "lint:fix": "eslint --ext .js,.ts --ignore-path .gitignore . --fix",
-    "test": "jest --verbose --runInBand --detectOpenHandles && yarn test:google-nest-notifiler && yarn test:listener",
+    "test": "yarn test:google-nest-notifiler && yarn test:listener",
     "test:google-nest-notifiler": "yarn workspace google-nest-notifier test",
     "test:listener": "yarn workspace listener test"
   },
-  "dependencies": {
-    "@hapi/boom": "^9.1.0",
-    "castv2-client": "^1.2.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "google-tts-api": "^0.0.6",
-    "mdns-js": "^1.0.3",
-    "module-alias": "^2.2.2",
-    "morgan": "^1.9.1",
-    "ngrok": "^3.2.7",
-    "pm2": "^4.5.6",
-    "proper-url-join": "^2.1.1"
-  },
   "devDependencies": {
-    "@types/express": "^4.17.2",
     "@types/jest": "^26.0.22",
-    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.24.0",
@@ -50,17 +25,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^26.6.3",
     "lerna": "^4.0.0",
-    "minimist": "^1.2.5",
-    "node-mocks-http": "^1.8.1",
-    "nodemon": "^2.0.7",
     "prettier": "^2.3.0",
-    "supertest": "^6.1.3",
     "ts-jest": "^26.5.5",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.4"
-  },
-  "_moduleAliases": {
-    "~": "dist"
   }
 }
