--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -26,6 +26,7 @@
     "reload": "pm2 reload ecosystem.config.js --env production --update-env",
     "restart": "pm2 restart ecosystem.config.js --env production --update-env",
     "stop": "pm2 stop ecosystem.config.js",
+    "logs": "pm2 logs google-nest-notifier --nostream",
     "deploy": "pm2 deploy ecosystem.config.js production",
     "deploy:setup": "pm2 deploy ecosystem.config.js production setup",
     "deploy:only": "pm2 deploy ecosystem.config.js deploy-only",
