feat: Set default language with .env

--- a/examples/listener/.env.example
+++ b/examples/listener/.env.example
@@ -1,5 +1,9 @@
 PORT=3000
 
+# Default language (OPTIONAL)
+# https://cloud.google.com/translate/docs/languages
+LANGUAGE=en
+
 # 0: false, 1: true
 USE_NGROK=0
 
