+ "directory": "packages/google-nest-notifier"

--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -15,7 +15,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/inouetakuya/google-nest-notifier.git"
+    "url": "git+ssh://git@github.com/inouetakuya/google-nest-notifier.git",
+    "directory": "examples/listener"
   },
   "bugs": {
     "url": "https://github.com/inouetakuya/google-nest-notifier/issues"
