--- a/packages/google-nest-notifier/package.json
+++ b/packages/google-nest-notifier/package.json
@@ -24,7 +24,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/inouetakuya/google-nest-notifier.git"
+    "url": "git+ssh://git@github.com/inouetakuya/google-nest-notifier.git",
+    "directory": "packages/google-nest-notifier"
   },
   "bugs": {
     "url": "https://github.com/inouetakuya/google-nest-notifier/issues"
