--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,4 +38,4 @@ jobs:
 
       - run: yarn lint
       - run: yarn workspace listener build
-      - run: yarn test
+      - run: yarn test:google-nest-notifier
