--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@types/jest": "^26.0.22",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
+    "add": "^2.0.6",
     "eslint": "^7.24.0",
     "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.3.1",
     "prettier": "^2.3.0",
-    "ts-jest": "^26.5.5",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.2.4"
   }
 }
