--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -5,7 +5,13 @@ jobs:
     name: runner / eslint
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '16'
+      - run: yarn workspace google-nest-notifier install
+      - run: yarn workspace google-nest-notifier build
+      - run: yarn install
       - name: eslint
         uses: reviewdog/action-eslint@v1
         with:
