fix: "types": "dist/index.d.ts"

--- a/packages/google-nest-notifier/package.json
+++ b/packages/google-nest-notifier/package.json
@@ -12,6 +12,7 @@
   "homepage": "https://github.com/inouetakuya/google-nest-notifier#readme",
   "license": "MIT",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "dist"
   ],
