format fix with prettier

--- a/examples/listener/tsconfig.json
+++ b/examples/listener/tsconfig.json
@@ -12,7 +12,5 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
