--- a/packages/google-nest-notifier/tsconfig.json
+++ b/packages/google-nest-notifier/tsconfig.json
@@ -13,7 +13,5 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"]
 }
