--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -43,22 +43,22 @@
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
   "dependencies": {
-    "@hapi/boom": "^9.1.2",
-    "dotenv": "^10.0.0",
-    "express": "^4.18.2",
-    "google-nest-notifier": "^0.0.3",
-    "morgan": "^1.10.0",
+    "@hapi/boom": "9.1.2",
+    "dotenv": "10.0.0",
+    "express": "4.18.2",
+    "google-nest-notifier": "0.0.6",
+    "morgan": "1.10.0",
     "ngrok": "4.0.1",
-    "pm2": "^5.2.0",
-    "proper-url-join": "^2.1.1"
+    "pm2": "5.2.0",
+    "proper-url-join": "2.1.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/morgan": "^1.9.2",
-    "@types/proper-url-join": "^2.1.0",
-    "@types/supertest": "^2.0.11",
-    "nodemon": "^2.0.15",
-    "supertest": "^6.1.6",
-    "ts-node": "^10.9.1"
+    "@types/express": "4.17.17",
+    "@types/morgan": "1.9.2",
+    "@types/proper-url-join": "2.1.0",
+    "@types/supertest": "2.0.11",
+    "nodemon": "2.0.15",
+    "supertest": "6.1.6",
+    "ts-node": "10.9.1"
   }
 }
