fix build error TS2386: Overload signatures must all be optional or required

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@types/jest": "29.5.13",
+    "@types/node": "22.7.5",
     "@typescript-eslint/eslint-plugin": "8.8.1",
     "@typescript-eslint/parser": "8.8.1",
     "add": "2.0.6",
