--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "test:listener": "yarn workspace listener test"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "3.1.0",
+    "@eslint/js": "9.12.0",
     "@types/jest": "29.5.13",
     "@types/node": "22.7.5",
     "@typescript-eslint/eslint-plugin": "8.8.1",
@@ -27,6 +29,7 @@
     "eslint": "9.12.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-prettier": "5.2.1",
+    "globals": "15.11.0",
     "jest": "29.7.0",
     "prettier": "3.3.3",
     "ts-jest": "29.2.5",
