--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test:listener": "yarn workspace listener test"
   },
   "devDependencies": {
+    "@eslint/compat": "1.2.0",
     "@eslint/eslintrc": "3.1.0",
     "@eslint/js": "9.12.0",
     "@types/jest": "29.5.13",
