Set eslint_flags: '--config eslint.config.mjs'

--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -21,3 +21,4 @@ jobs:
           reporter: github-pr-review
           filter_mode: nofilter
           fail_on_error: false # because level is warning
+          eslint_flags: '--config eslint.config.mjs'
