Use pnpm as scripts

--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "lint:fix": "eslint --fix",
     "format:check": "prettier --check .",
     "format:fix": "prettier --write .",
-    "test": "yarn test:google-nest-notifier && yarn test:listener",
-    "test:google-nest-notifier": "yarn workspace google-nest-notifier test",
-    "test:listener": "yarn workspace listener test"
+    "test": "pnpm test:google-nest-notifier && pnpm test:listener",
+    "test:google-nest-notifier": "pnpm --filter google-nest-notifier test",
+    "test:listener": "pnpm --filter listener test"
   },
   "devDependencies": {
     "@eslint/compat": "1.2.2",
