--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -32,13 +32,13 @@
     "deploy": "pm2 deploy ecosystem.config.js production",
     "deploy:setup": "pm2 deploy ecosystem.config.js production setup",
     "deploy:only": "pm2 deploy ecosystem.config.js deploy-only",
-    "deploy:install:yarn": "pm2 deploy ecosystem.config.js production exec 'npm install --global yarn'",
-    "deploy:install:google-nest-notifier": "pm2 deploy ecosystem.config.js production exec 'yarn install && yarn workspace google-nest-notifier build && yarn workspace listener install'",
-    "deploy:build": "pm2 deploy ecosystem.config.js production exec 'yarn workspace listener build'",
-    "deploy:start": "pm2 deploy ecosystem.config.js production exec 'yarn workspace listener start'",
-    "deploy:stop": "pm2 deploy ecosystem.config.js production exec 'yarn workspace listener stop'",
-    "deploy:status": "pm2 deploy ecosystem.config.js production exec 'yarn workspace listener status'",
-    "deploy:logs": "pm2 deploy ecosystem.config.js production exec 'yarn workspace listener logs'",
+    "deploy:install:pnpm": "pm2 deploy ecosystem.config.js production exec 'npm install --global pnpm'",
+    "deploy:install:google-nest-notifier": "pm2 deploy ecosystem.config.js production exec 'pnpm install && pnpm --filter google-nest-notifier build && pnpm --filter listener install'",
+    "deploy:build": "pm2 deploy ecosystem.config.js production exec 'pnpm --filter listener build'",
+    "deploy:start": "pm2 deploy ecosystem.config.js production exec 'pnpm --filter listener start'",
+    "deploy:stop": "pm2 deploy ecosystem.config.js production exec 'pnpm --filter listener stop'",
+    "deploy:status": "pm2 deploy ecosystem.config.js production exec 'pnpm --filter listener status'",
+    "deploy:logs": "pm2 deploy ecosystem.config.js production exec 'pnpm --filter listener logs'",
     "dev": "nodemon",
     "test": "jest --verbose --runInBand --detectOpenHandles"
   },
