Install pnpm on CI

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install pnpm
+        run: npm install --global pnpm
+
       - name: Setup
         run: |
           pnpm --filter google-nest-notifier install
