--- a/examples/listener/package.json
+++ b/examples/listener/package.json
@@ -1,6 +1,6 @@
 {
   "name": "listener",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Listener for google-nest-notifier",
   "author": "INOUE Takuya <inouetakuya5@gmail.com>",
   "homepage": "https://github.com/inouetakuya/google-nest-notifier#readme",
@@ -46,7 +46,7 @@
     "@hapi/boom": "9.1.2",
     "dotenv": "16.4.5",
     "express": "4.20.0",
-    "google-nest-notifier": "0.0.6",
+    "google-nest-notifier": "latest",
     "morgan": "1.10.0",
     "ngrok": "4.0.1",
     "pm2": "5.2.0",
